--- a/html/home.html
+++ b/html/home.html
@@ -18,10 +18,9 @@
 
     <nav>
         <ul class="list">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#Trending">Trending</a></li>
-            <li><a href="#Post">Make a Post</a></li>
-            <li><a href="#Manage">Account Management</a></li>
+            <li><a href="viewposttitles.php">Home</a></li>
+            <li><a href="makepost.php">Make a Post</a></li>
+            <li><a href="accmgmt.php">Account Management</a></li>
         </ul>
         <div class="search-container">
             <form action="/search">
@@ -79,7 +78,6 @@
 </section>
 
     <footer>
-        <p> <a href="#">Home</a> | <a href="#">Browse</a> | <a href="#">Search</a> </p>
         <p><i>Copyright &copy; 2023 The Gamer's Den</i></p>
     </footer>
 
