--- a/html/forgot_pass.html
+++ b/html/forgot_pass.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href = "../css/reset.css"/>
+  <link rel="stylesheet" href="../css/masthead.css"/>
+  <link rel="stylesheet" href="../css/mainform.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
